# Masterarbeit_code

./: .gitignore  NoteBoard.drawio  README.md  ToDo.md  flight_forecast.py  pyproject.toml
code/: 01_download_ocean_model_data.ipynb  01_download_weather_data_full_grid.ipynb  02_ARIMA.ipynb  02_EDA.ipynb  02_EDA_V02.ipynb  03_feature_importance.py  04_EOF.ipynb  04_ML_Forecast_based_on_history_OPTUNA.ipynb  04_V1_model_evaluation.py  04_V2_model_evaluation.py  04_V3_model_evaluation.py  04_Versuch1_MODEL_TRAINING.py  04_Versuch2_MODEL_TRAINING.py  04_Versuch3_ML_OPTUNA.py  04_model_evaluation.py  04_model_evaluation.sbatch  05_DL_Forecast_based_on_history.ipynb  05_DL_Forecast_based_on_history_OPTUNA.ipynb  05_MODEL_OPT.py  05_Versuch1_DL_OPTUNA.ipynb  05_Versuch1_DL_OPTUNA.py  05_Versuch3_DL_OPTUNA.py  05_Versuch3_DL_OPTUNA_v2.py  05_Versuch3_final_Training.py  Versuch1.1_optuna_study_ML_lgbm.db  Versuch1.1_optuna_study_ML_lr.db  Versuch1.1_optuna_study_ML_rf.db  Versuch1.1_optuna_study_ML_svr.db  Versuch1.1_optuna_study_ML_xgboost.db  Versuch1_ConvLSTM_CustomScore.db  Versuch1_optuna_study_ML.db  Versuch1_optuna_study_ML_custom_function.db  Versuch1_optuna_study_ML_lr.db  Versuch1_optuna_study_ML_rf.db  Versuch1_optuna_study_ML_sarima.db  Versuch1_optuna_study_ML_svr.db  Versuch1_optuna_study_ML_xgboost.db  Versuch2_optuna_study_ML_lr.db  Versuch2_optuna_study_ML_rf.db  Versuch2_optuna_study_ML_svr.db  (+28 more)
notes/: presentation_notes.md  sturmfluten_research.md
parameter/: best_params_rf_points10_ntrials100_fi.toml  best_params_rf_points10_ntrials5_fi.toml  (+3 more)
(+78 files in other folders)
