[project]
name = "geomar-deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ace-tools>=0.0",
    "basemap>=1.4.1",
    "cartopy>=0.24.1",
    "catboost>=1.2.8",
    "copernicusmarine>=2.0.1",
    "eofs>=2.0.0",
    "ffmpeg>=1.4",
    "geodatasets>=2024.8.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "joblib>=1.4.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.8.4",
    "mlforecast>=1.0.2",
    "nbformat>=5.10.4",
    "netcdf4>=1.7.2",
    "numpy>=1.26.4",
    "openmeteo-requests>=1.4.0",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.18.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pca>=2.0.9",
    "pip>=25.1.1",
    "plotly>=6.1.0",
    "pmdarima>=2.0.4",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torch-tb-profiler==0.4.3",
    "tqdm>=4.67.1",
    "utilsforecast>=0.2.12",
    "watchdog>=6.0.0",
    "window-ops>=0.0.15",
    "xarray>=2025.3.1",
    "xgboost>=3.0.1",
]
